--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "recomb"
 version = "0.1.0"
 authors = ["David J. H. Shih <djh.shih@gmail.com>"]
+license = "MIT"
 
 [dependencies]
 bitvec = "0.13"
